# efgh

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml
data/: mouse_hs1940.csv  mouse_hs1940.vcf.gz.tbi
src/efgh/: cli.py  config.py  gwas.py  haplotype.py  merge_phenotype.py  pca.py  plotting.py  preprocess.py  process.py  qc.py  result.py  util.py  utils.py  vcf2zarr.py
src/efgh/configs/: default.yaml
src/test/: out_test_csv.py  test.py  vcf2zarr.py
