[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "efgh"
version = "0.1.0"
description = "A GWAS workflow tool"
authors = [{name = "ZhuKun", email = "zc19981023@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "sgkit~=0.10.0",
    "click~=8.1.8",
    "pandas~=2.2.3",
    "numpy~=1.26.4",
    "PyYAML~=6.0.2",
    "matplotlib~=3.10.1",
    "seaborn~=0.13.2",
    "zarr~=2.18.3",
    "bio2zarr~=0.1.5",
]

[project.scripts]
efgh = "efgh.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"efgh.configs" = ["default.yaml"]